3.8.0/_sources/plugins/environment_variables.rst.txt

:orphan:

.. _list_of_collection_env_vars:

Index of all Collection Environment Variables
=============================================

The following index documents all environment variables declared by plugins in collections.
Environment variables used by the ansible-core configuration are documented in :ref:`ansible_configuration_settings`.

.. envvar:: ANSIBLE_INVENTORY_USE_EXTRA_VARS

    Merge extra vars into the available variables for composition (highest precedence).

    *Used by:*
    :ref:`redhat.satellite.foreman inventory plugin <ansible_collections.redhat.satellite.foreman_inventory>`
.. envvar:: FOREMAN_CALLBACK_DISABLE

    Toggle to make the callback plugin disable itself even if it is loaded.

    It can be set to '1' to prevent the plugin from being used even if it gets loaded.

    *Used by:*
    :ref:`redhat.satellite.foreman callback plugin <ansible_collections.redhat.satellite.foreman_callback>`
.. envvar:: FOREMAN_DIR_STORE

    When set, callback does not perform HTTP calls but stores results in a given directory.

    For each report, new file in the form of SEQ\_NO-hostname.json is created.

    For each facts, new file in the form of SEQ\_NO-hostname.json is created.

    The value must be a valid directory.

    This is meant for debugging and testing purposes.

    When set to blank (default) this functionality is turned off.

    *Used by:*
    :ref:`redhat.satellite.foreman callback plugin <ansible_collections.redhat.satellite.foreman_callback>`
.. envvar:: FOREMAN_PASSWORD

    Password of the user accessing the Foreman server.

    *Used by:*
    :ref:`redhat.satellite.foreman inventory plugin <ansible_collections.redhat.satellite.foreman_inventory>`
.. envvar:: FOREMAN_PROXY_URL

    URL of the Foreman Smart Proxy server.

    *Used by:*
    :ref:`redhat.satellite.foreman callback plugin <ansible_collections.redhat.satellite.foreman_callback>`
.. envvar:: FOREMAN_REPORT_TYPE

    endpoint type for reports: foreman or proxy

    *Used by:*
    :ref:`redhat.satellite.foreman callback plugin <ansible_collections.redhat.satellite.foreman_callback>`
.. envvar:: FOREMAN_SERVER

    URL of the Foreman server.

    *Used by:*
    :ref:`redhat.satellite.foreman callback plugin <ansible_collections.redhat.satellite.foreman_callback>`,
    :ref:`redhat.satellite.foreman inventory plugin <ansible_collections.redhat.satellite.foreman_inventory>`
.. envvar:: FOREMAN_SERVER_URL

    URL of the Foreman server.

    *Used by:*
    :ref:`redhat.satellite.foreman callback plugin <ansible_collections.redhat.satellite.foreman_callback>`,
    :ref:`redhat.satellite.foreman inventory plugin <ansible_collections.redhat.satellite.foreman_inventory>`
.. envvar:: FOREMAN_SSL_CERT

    X509 certificate to authenticate to Foreman if https is used

    *Used by:*
    :ref:`redhat.satellite.foreman callback plugin <ansible_collections.redhat.satellite.foreman_callback>`
.. envvar:: FOREMAN_SSL_KEY

    the corresponding private key

    *Used by:*
    :ref:`redhat.satellite.foreman callback plugin <ansible_collections.redhat.satellite.foreman_callback>`
.. envvar:: FOREMAN_SSL_VERIFY

    Toggle to decide whether to verify the Foreman certificate.

    It can be set to '1' to verify SSL certificates using the installed CAs or to a path pointing to a CA bundle.

    Set to '0' to disable certificate checking.

    *Used by:*
    :ref:`redhat.satellite.foreman callback plugin <ansible_collections.redhat.satellite.foreman_callback>`
.. envvar:: FOREMAN_URL

    URL of the Foreman server.

    *Used by:*
    :ref:`redhat.satellite.foreman callback plugin <ansible_collections.redhat.satellite.foreman_callback>`,
    :ref:`redhat.satellite.foreman inventory plugin <ansible_collections.redhat.satellite.foreman_inventory>`
.. envvar:: FOREMAN_USER

    Username accessing the Foreman server.

    *Used by:*
    :ref:`redhat.satellite.foreman inventory plugin <ansible_collections.redhat.satellite.foreman_inventory>`
.. envvar:: FOREMAN_USERNAME

    Username accessing the Foreman server.

    *Used by:*
    :ref:`redhat.satellite.foreman inventory plugin <ansible_collections.redhat.satellite.foreman_inventory>`
.. envvar:: FOREMAN_VALIDATE_CERTS

    Whether or not to verify the TLS certificates of the Foreman server.

    *Used by:*
    :ref:`redhat.satellite.foreman inventory plugin <ansible_collections.redhat.satellite.foreman_inventory>`
